tests/ui/union/unnamed-fields/restrict_anonymous_unions.stderr
error: anonymous unions are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_unions.rs:4:11
   |
LL | fn f() -> union { field: u8 } {}
   |           ^^^^^^^^^^^^^^^^^^^ anonymous union declared here

error: anonymous unions are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_unions.rs:7:10
   |
LL | fn f2(a: union { field: u8 } ) {}
   |          ^^^^^^^^^^^^^^^^^^^ anonymous union declared here

error: anonymous unions are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_unions.rs:11:12
   |
LL |     field: union { field: u8 },
   |            ^^^^^^^^^^^^^^^^^^^ anonymous union declared here

error: unnamed fields can only have struct or union types
  --> $DIR/restrict_anonymous_unions.rs:18:5
   |
LL |     _: (u8, u8),
   |     ^  -------- not a struct or union

error: anonymous unions are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_unions.rs:22:12
   |
LL |     field: union { field: u8 },
   |            ^^^^^^^^^^^^^^^^^^^ anonymous union declared here

error: unnamed fields can only have struct or union types
  --> $DIR/restrict_anonymous_unions.rs:29:5
   |
LL |     _: (u8, u8),
   |     ^  -------- not a struct or union

error: anonymous unions are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_unions.rs:32:10
   |
LL | struct J(union { field: u8 }, u8);
   |          ^^^^^^^^^^^^^^^^^^^ anonymous union declared here

error: anonymous unions are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_unions.rs:36:7
   |
LL |     L(union { field: u8 }),
   |       ^^^^^^^^^^^^^^^^^^^ anonymous union declared here

error: unnamed fields are not allowed outside of structs or unions
  --> $DIR/restrict_anonymous_unions.rs:39:9
   |
LL |         _ : union { field: u8 },
   |         -^^^^^^^^^^^^^^^^^^^^^^
   |         |
   |         unnamed field declared here

error: anonymous unions are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_unions.rs:39:13
   |
LL |         _ : union { field: u8 },
   |             ^^^^^^^^^^^^^^^^^^^ anonymous union declared here

error: unnamed fields are not allowed outside of structs or unions
  --> $DIR/restrict_anonymous_unions.rs:44:9
   |
LL |         _ : u8,
   |         -^^^^^
   |         |
   |         unnamed field declared here

error: anonymous unions are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_unions.rs:48:10
   |
LL | const L: union { field: u8 } = 0;
   |          ^^^^^^^^^^^^^^^^^^^ anonymous union declared here

error: anonymous unions are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_unions.rs:51:11
   |
LL | static M: union { field: u8 } = 0;
   |           ^^^^^^^^^^^^^^^^^^^ anonymous union declared here

error: anonymous unions are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_unions.rs:54:10
   |
LL | type N = union { field: u8 };
   |          ^^^^^^^^^^^^^^^^^^^ anonymous union declared here

error: anonymous unions are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_unions.rs:57:6
   |
LL | impl union { field: u8 } {}
   |      ^^^^^^^^^^^^^^^^^^^ anonymous union declared here

error: anonymous unions are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_unions.rs:62:14
   |
LL | impl Foo for union { field: u8 } {}
   |              ^^^^^^^^^^^^^^^^^^^ anonymous union declared here

error: anonymous unions are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_unions.rs:66:13
   |
LL |     let p: [union { field: u8 }; 1];
   |             ^^^^^^^^^^^^^^^^^^^ anonymous union declared here

error: anonymous unions are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_unions.rs:69:13
   |
LL |     let q: (union { field: u8 }, u8);
   |             ^^^^^^^^^^^^^^^^^^^ anonymous union declared here

error: anonymous unions are not allowed outside of unnamed struct or union fields
  --> $DIR/restrict_anonymous_unions.rs:72:19
   |
LL |     let c = || -> union { field: u8 } {};
   |                   ^^^^^^^^^^^^^^^^^^^ anonymous union declared here

error: anonymous unions are unimplemented
  --> $DIR/restrict_anonymous_unions.rs:4:11
   |
LL | fn f() -> union { field: u8 } {}
   |           ^^^^^^^^^^^^^^^^^^^

error: anonymous unions are unimplemented
  --> $DIR/restrict_anonymous_unions.rs:7:10
   |
LL | fn f2(a: union { field: u8 } ) {}
   |          ^^^^^^^^^^^^^^^^^^^

error: anonymous unions are unimplemented
  --> $DIR/restrict_anonymous_unions.rs:11:12
   |
LL |     field: union { field: u8 },
   |            ^^^^^^^^^^^^^^^^^^^

error: anonymous unions are unimplemented
  --> $DIR/restrict_anonymous_unions.rs:13:8
   |
LL |     _: union { field: u8 },
   |        ^^^^^^^^^^^^^^^^^^^

error: anonymous unions are unimplemented
  --> $DIR/restrict_anonymous_unions.rs:22:12
   |
LL |     field: union { field: u8 },
   |            ^^^^^^^^^^^^^^^^^^^

error: anonymous unions are unimplemented
  --> $DIR/restrict_anonymous_unions.rs:24:8
   |
LL |     _: union { field: u8 },
   |        ^^^^^^^^^^^^^^^^^^^

error: anonymous unions are unimplemented
  --> $DIR/restrict_anonymous_unions.rs:32:10
   |
LL | struct J(union { field: u8 }, u8);
   |          ^^^^^^^^^^^^^^^^^^^

error: anonymous unions are unimplemented
  --> $DIR/restrict_anonymous_unions.rs:36:7
   |
LL |     L(union { field: u8 }),
   |       ^^^^^^^^^^^^^^^^^^^

error: anonymous unions are unimplemented
  --> $DIR/restrict_anonymous_unions.rs:39:13
   |
LL |         _ : union { field: u8 },
   |             ^^^^^^^^^^^^^^^^^^^

error: anonymous unions are unimplemented
  --> $DIR/restrict_anonymous_unions.rs:48:10
   |
LL | const L: union { field: u8 } = 0;
   |          ^^^^^^^^^^^^^^^^^^^

error: anonymous unions are unimplemented
  --> $DIR/restrict_anonymous_unions.rs:51:11
   |
LL | static M: union { field: u8 } = 0;
   |           ^^^^^^^^^^^^^^^^^^^

error: anonymous unions are unimplemented
  --> $DIR/restrict_anonymous_unions.rs:54:10
   |
LL | type N = union { field: u8 };
   |          ^^^^^^^^^^^^^^^^^^^

error: anonymous unions are unimplemented
  --> $DIR/restrict_anonymous_unions.rs:57:6
   |
LL | impl union { field: u8 } {}
   |      ^^^^^^^^^^^^^^^^^^^

error: anonymous unions are unimplemented
  --> $DIR/restrict_anonymous_unions.rs:62:14
   |
LL | impl Foo for union { field: u8 } {}
   |              ^^^^^^^^^^^^^^^^^^^

error: anonymous unions are unimplemented
  --> $DIR/restrict_anonymous_unions.rs:66:13
   |
LL |     let p: [union { field: u8 }; 1];
   |             ^^^^^^^^^^^^^^^^^^^

error: anonymous unions are unimplemented
  --> $DIR/restrict_anonymous_unions.rs:69:13
   |
LL |     let q: (union { field: u8 }, u8);
   |             ^^^^^^^^^^^^^^^^^^^

error: anonymous unions are unimplemented
  --> $DIR/restrict_anonymous_unions.rs:72:19
   |
LL |     let c = || -> union { field: u8 } {};
   |                   ^^^^^^^^^^^^^^^^^^^

error: aborting due to 36 previous errors

